--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,20 +1,10 @@
-<div class="container text-center">
-  <h1>All my cocktails</h1>
+<div class="banner">
+  <div class="wrapper-intro">
+    <h1>Discover awesome cocktails</h1>
+    <%= link_to 'Create cocktail', new_cocktail_path, class: "btn btn-primary" %>
+    <%= link_to 'See ingredients', ingredients_path, class: "btn btn-primary" %>
+  </div>
 </div>
-
-<hr>
-
-<div class="container">
-  <%= link_to 'Create cocktail', new_cocktail_path, class: "btn btn-primary" %>
-</div>
-
-<hr>
-
-<div class="container">
-  <%= link_to 'See ingredients', ingredients_path, class: "btn btn-primary" %>
-</div>
-
-<hr>
 
 <div class="container">
 <% @cocktails.each do |cocktail| %>
@@ -23,6 +13,11 @@
   <p><%= link_to "Show cocktail details", cocktail_path(cocktail) %></p>
   <p><%= link_to "Delete cocktail", cocktail_path(cocktail), method: :delete, data: { confirm: "Are you sure?" } %></p>
 <% end -%>
+</div>
+
+
+<div class="wrapper-main">
+
 </div>
 
 
