Added figaro - Protect my secret data in config/application.yml

--- a/app/views/doses/_form.html.erb
+++ b/app/views/doses/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [@cocktail, @dose] do |f| %>
   <%= f.error_notification %>
-  <%= f.input :ingredient_id, collection: Ingredient.all %>
+  <%= f.input :ingredient_id, collection: Ingredient.all.order(:name) %>
   <%= f.input :description %>
   <%= f.submit "add a dose", class: "btn btn-primary" %>
 <% end %>
