--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,18 +2,20 @@
   <h1> <%= @cocktail.name %> </h1>
 </div>
 
-
 <div class="container">
-  <% @cocktail.doses.each do |dose| %>
-     <p> <%= dose.description %> </p>
-     <p> <%= dose.ingredient.name %> </p>
-     <p><%= link_to "Delete dose", dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } %></p>
-     <hr>
-  <% end %>
-</div>
 
+     <ul>
+        <% @cocktail.doses.each do |dose| %>
+        <li>
+          <%= dose.description %> of <%= dose.ingredient.name %>
+          <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
+            <i class="fa fa-trash"> </i>
+          <% end %>
+        </li>
+        <% end %>
+     </ul>
+</div>
 
 <div class="container">
   <%= link_to 'Add a dose', new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
 </div>
-
