--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -7,5 +7,10 @@
   <%= render 'form' %>
 </div>
 
+<br>
+
+<div class="container">
+  <%= link_to 'Back', cocktails_path, class: "btn btn-primary" %>
+</div>
 
 
