--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -5,6 +5,12 @@
 <hr>
 
 <div class="container">
+  <%= link_to 'Back', cocktails_path, class: "btn btn-primary" %>
+</div>
+
+<br>
+
+<div class="container">
   <%= link_to 'Create ingredient', new_ingredient_path, class: "btn btn-primary" %>
 </div>
 
@@ -16,3 +22,5 @@
     <hr>
   <% end %>
 </div>
+
+
