--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,9 @@
-<div class="banner">
-  <div class="wrapper-intro">
-    <h1>Discover awesome cocktails</h1>
-    <%= link_to 'Create cocktail', new_cocktail_path, class: "btn btn-primary" %>
-    <%= link_to 'See ingredients', ingredients_path, class: "btn btn-primary" %>
+<%= render "menu" %>
+
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('/assets/banner-image.jpeg');">
+  <div class="banner-content">
+    <h1>Mister Cocktail</h1>
+    <p>Do you want to party?</p>
   </div>
 </div>
 
@@ -10,15 +11,23 @@
   <div class="row">
     <% @cocktails.each do |cocktail| %>
       <div class="col-xs-12 col-md-4">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('background.jpg');">
+      <% if cocktail.photo? %>
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path cocktail.photo, height: 300, width: 400, crop: :fill %>');">
+            <div class="card-description">
+              <h2> <%= cocktail.name %> </h2>
+              <p> <%= cocktail.reviews.count %> reviews </p>
+            </div>
+            <%= link_to "", cocktail_path(cocktail), class: "card-link" %>
+        </div>
+      <% else %>
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('/assets/cocktail_placeholder.jpg');">
           <div class="card-description">
             <h2> <%= cocktail.name %> </h2>
             <p> <%= cocktail.reviews.count %> reviews </p>
           </div>
-          <img class="card-user avatar" src="user.jpg">
-          <%= link_to "Show cocktail details", cocktail_path(cocktail) %>
-          <%= link_to "Delete cocktail", cocktail_path(cocktail), method: :delete, data: { confirm: "Are you sure?" } %>
+          <%= link_to "", cocktail_path(cocktail), class: "card-link" %>
         </div>
+        <% end -%>
       </div>
     <% end -%>
   </div>
