--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -39,6 +39,12 @@
 <hr>
 
 <div class="container">
+  <%= link_to "Delete cocktail", cocktail_path(@cocktail), method: :delete, data: { confirm: "Are you sure?" }, class: "btn-danger" %>
+</div>
+
+<hr>
+
+<div class="container">
   <%= link_to 'Add a review', new_cocktail_review_path(@cocktail), :class => "btn btn-success" %>
 </div>
 
